任务添加变量，消息，新增webhook